tests/errors/semicolons_required_blocks.odl
main :: () -> void {
    {
        x := 3
        y := 4;
    };
};